--- a/sacabambaspis-flap/index.html
+++ b/sacabambaspis-flap/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
   <script src="app.js"></script>
+  <link rel="stylesheet" href="styles.css">
   <title>Sacabambaspis Flap</title>
 </head>
 <body>
+  <canvas id="board"></canvas>
 </body>
 </html>
